--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,6 @@
 .App {
   text-align: center;
-  display: flex;
+  /*display: flex;*/
   flex: 1;
   justify-content: center;
   flex-direction: column;
